@@ -6,6 +6,10 @@ CHANGES
 
 - LP #131460: Make principal logging unicode safe.
 - Remove use of string exceptions in tests, http://bugs.debian.org/585343
+- Add IStartRequestEvent and StartRequestEvent for using in
+  zope.app.publication (matching up with IEndRequestEvent and EndRequestEvent).
+  This included refactoring to produce one definition of 'event with a request'
+  - IRequestEvent.
 
 3.12.3 (2010-04-30)
 -------------------
